# gravit-dwf-poc

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md
.github/workflow/: ci.yml
.github/workflows/: build.yml  mainnet-ci.yml  quantum-sim.yml
00_category/: system_definition.md
03_alpha_layer/: pnl_impact_model.md
cmd/demo/: main.cpp
cmd/dwf-hft/: main.cpp
demo/: DEMO_PROTOCOL.md
docs/: ARCHITECTURE.md  multi_chain_defi_liquidity_pools.md  perps_architecture.md  pm_integration.md  proposal_summary.md  qpu_roadmap.md  quantum_arbitrage_deep_dive.md  solana_mainnet_deployment.md
dwf_partnership/: demo_script.md  joint_statement.md  one_pager.md  pilot_launch_report.md  pilot_plan.md  proposal.md  term_sheet_template.md
economics/: capital_efficiency_calcs.py  execution_impact.md  rebate_auction_model.md  tokenomics.md
epistemic_core/: EES_v2.5.cpp  EES_v2.5.h  GQRVPProof.h  adversarial_model.cpp  contradiction_graph.cpp  gqrvp_proof.h  validation_engine.cpp
epistemic_core/quantum_arb_v2.3/: entanglement_sim.cpp  grover_oracle.cpp  vqe_optimizer.cpp
execution_pipeline/: FalconYieldContext.h  TestScenario.h  a_to_b_to_c.cpp  a_to_b_to_c.h  grpc_interface.cpp  grpc_interface.h  grpc_interface.proto
hft_engine/: coroutine_executor.cpp  lockfree_queue.cpp
infrastructure/: Dockerfile  docker-compose.yml  kubernetes.yaml
infrastructure/solana_mainnet/: deploy_GrvtEESv2.5.sh
integration_surface/: entrypoints.md  signal_contracts.md
liquidity_pools/: quantum_allocator.cpp  yield_engine.cpp  yield_engine.h
liquidity_pools/multi_chain_pools/: cross_chain_router.cpp  quantum_allocator.cpp
market_integration/: falcon_adapter.cpp  falcon_adapter.h  kalshi_solana_adapter_v2.5.rs
multi_chain/sdk/: gravit_multi_chain_sdk.rs
observability/: metrics_collector.cpp
perps_layer/: probability_perpetuals.cpp
pilot/: launch_log_2026-05-08.md  monitoring_guide.md
proto/gravit/dwf/v1/: integration.proto
qpu_roadmap/: full_qpu_architecture.md
replay_engine/: trace_store.cpp
scripts/: run_demo.sh
tests/: quantum_arb_test.cpp  test_pipeline.cpp
